виконав 2-4 завданя редагував